# DTVM

./: AGENTS.md  BUILD.bazel1.2.1  CMakeLists.txt  EVMOneUnitTestsRunList.txt
.ci/: run_test_suite.sh
.claude/commands/: openspec-apply.md  openspec-archive.md  openspec-clarify.md  openspec-proposal-clarify.md  openspec-proposal.md  openspec_proposal_clarify.md
.github/workflows/: auto-assign.yml  dtvm_evm_test_x86.yml
example/cpp_sgx/App/: App.cpp
openspec/: README.md  architecture.md  coding-style.md  project.md  testing.md
openspec/changes/add-evm-jit-fallback/: design.md  proposal.md  tasks.md
openspec/changes/add-evm-jit-fallback/specs/evm-execution/: spec.md
openspec/changes/add-evm-jit-fallback/specs/evm-jit-fallback/: spec.md
openspec/changes/archive/2026-01-05-add-evmc-vm-interface-lib/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-03-add-clz-opcode/: proposal.md  tasks.md
openspec/changes/archive/2026-02-12-add-jit-suitability-checker/: design.md  proposal.md  tasks.md
openspec/specs/evm-execution/: spec.md
openspec/specs/evm-jit/: spec.md
openspec/specs/evm-tests/: spec.md
openspec/specs/evmc-vm-interface/: spec.md
src/: CMakeLists.txt
src/action/: compiler.cpp  evm_bytecode_visitor.h  evm_module_loader.h
src/cli/: CMakeLists.txt  dtvm.cpp
src/common/: errors.def
src/compiler/: CMakeLists.txt  compiler.cpp  context.h  evm_compiler.cpp
src/compiler/cgir/: cg_basic_block.cpp  cg_basic_block.h  lowering.h  mc_lowering.h
src/compiler/cgir/pass/: cg_split_kit.cpp
src/compiler/evm_frontend/: evm_analyzer.h  evm_imported.cpp  evm_imported.h  evm_mir_compiler.cpp  evm_mir_compiler.h
src/compiler/mir/: basic_block.h  function.h  instruction.h  instructions.cpp  instructions.h  opcode.h  opcodes.def
src/compiler/mir/pass/: verifier.cpp  visitor.h
src/compiler/utils/: asm_dump.cpp  asm_dump.h  hash_utils.h
src/evm/: CMakeLists.txt  evm.h  evm_cache.cpp  evm_cache.h  evm_cache.md  gas_storage_cost.h  interpreter.cpp  interpreter.h  opcode_handlers.cpp  opcode_handlers.h
src/runtime/: codeholder.cpp  config.h  evm_instance.cpp  evm_instance.h  evm_module.cpp  evm_module.h  runtime.cpp  runtime.h
src/tests/: CMakeLists.txt  evm_fallback_execution_tests.cpp  evm_interp_tests.cpp  evm_precompiles.hpp  evm_state_tests.cpp  evm_test_fixtures.cpp  evm_test_fixtures.h  evm_test_helpers.cpp  evm_test_helpers.h  evm_test_host.hpp  mpt_compare_cpp.cpp  solidity_contract_tests.cpp  solidity_test_helpers.cpp  solidity_test_helpers.h  spec_unit_tests.cpp
src/tests/mpt/: CMakeLists.txt  merkle_patricia_trie.cpp
src/utils/: CMakeLists.txt  evm.cpp  evm.h  others.cpp  others.h  rlp_encoding.cpp  rlp_encoding.h
src/vm/: CMakeLists.txt  dt_evmc_vm.cpp  dt_evmc_vm.h  wrapped_host.h
tests/evm_asm/: call_nonzero_size_large_offset_const.easm  call_nonzero_size_large_offset_nonconst.easm  call_nonzero_size_large_offset_nonconst.expected  call_output_tail_preserve.easm  call_output_tail_preserve.expected  call_zero_size_large_offset.easm  call_zero_size_large_offset.expected  caller.expected  clz.easm  clz.expected  clz_max.easm  clz_zero.easm  clz_zero.expected  codecopy_neg_0x10.easm  div_mstore.easm  div_mstore.expected  gas.easm  log_all.easm  log_all.expected  msize_farchunk.easm  msize_farchunk.expected  sar.expected  sar__1__0.easm  sar__2pow255_sub1__248.easm  sar__2pow255_sub1__248.expected  sar__2pow255_sub1__254.easm  sar__2pow255_sub1__254.expected  sar__2pow255_sub1__255.easm  sar__neg8__2.easm  sar__neg_2pow255__255.easm  sar__neg_2pow255__255.expected  sar_edge.expected  shl.expected  shl__1__0.easm  shl__1__255.easm  shl__1__255.expected  shl__1__3.easm  shl__1__3.expected  shl__1__64.easm  shl__1__64.expected  (+17 more)
tests/evm_solidity/Factory/: test_cases.json
tests/evm_solidity/basic/: test_cases.json
tests/evm_solidity/callee/: test_cases.json
tests/evm_solidity/caller/: test_cases.json
tests/evm_solidity/erc20/: test_cases.json
tests/evm_solidity/fibonacci/: fibonacci.sol  test_cases.json
tests/evm_solidity/fibonacci_recur/: fibonacci_recur.sol  test_cases.json
tests/evm_spec_test/state_tests/berlin/eip2930_access_list/: test_account_storage_warm_cold_state.json  test_repeated_address_acl.json  test_transaction_intrinsic_gas_cost.json
tests/evm_spec_test/state_tests/byzantium/eip196_ec_add_mul/: test_gas_costs.json
tests/evm_spec_test/state_tests/byzantium/eip197_ec_pairing/: test_gas_costs.json
tests/evm_spec_test/state_tests/byzantium/eip198_modexp_precompile/: test_modexp.json
tests/evm_spec_test/state_tests/cancun/eip4844_blobs/: test_blob_gas_subtraction_tx.json  test_blob_tx_attribute_calldata_opcodes.json  test_blob_tx_attribute_gasprice_opcode.json  test_blob_tx_attribute_opcodes.json  test_blob_tx_attribute_value_opcode.json  test_blobhash_gas_cost.json  test_blobhash_opcode_contexts.json  test_blobhash_opcode_contexts_tx_types.json  test_insufficient_balance_blob_tx.json  test_invalid_blob_hash_versioning_single_tx.json  test_invalid_normal_gas.json  test_invalid_tx_blob_count.json  test_invalid_tx_max_fee_per_blob_gas_state.json
tests/evm_spec_test/state_tests/cancun/eip5656_mcopy/: test_mcopy_huge_memory_expansion.json  test_mcopy_memory_expansion.json  test_mcopy_memory_expansion.py  test_mcopy_on_empty_memory.json  test_no_memory_corruption_on_upper_call_stack_levels.json  test_no_memory_corruption_on_upper_create_stack_levels.json  test_valid_mcopy_operations.json
tests/evm_spec_test/state_tests/cancun/eip6780_selfdestruct/: test_calling_from_new_contract_to_pre_existing_contract.json  test_calling_from_pre_existing_contract_to_new_contract.json  test_create_selfdestruct_same_tx.json  test_create_selfdestruct_same_tx_increased_nonce.json  test_dynamic_create2_selfdestruct_collision.json  test_reentrancy_selfdestruct_revert.json  test_self_destructing_initcode.json  test_selfdestruct_pre_existing.json  (+3 more)
tests/evmone_unittests/: EVMOneInterpreterUnitTestsRunList.txt  EVMOneMultipassUnitTestsRunList.txt
tools/: easm2bytecode.py  run_evm_tests.py  solc_batch_compile.sh
(+156 files in other folders)
